TM-12775 API Actions Display: JS Error is being retrieved when displaying APIs
Add validation to handle null values on agentClass property

--- a/web-app/tds/web-app/app-js/modules/apiAction/components/view-edit/api-action-view-edit.component.html
+++ b/web-app/tds/web-app/app-js/modules/apiAction/components/view-edit/api-action-view-edit.component.html
@@ -102,7 +102,7 @@
 																	(open)="onOpenAgentMethod()"
 																	(valueChange)="onMethodValueChange($event)"
 																	[(ngModel)]="apiActionModel.agentMethod"
-																	[disabled]="apiActionModel.agentClass.id === '0'"
+																	[disabled]="!apiActionModel.agentClass.id"
 																	required [ngClass]="{'has-error':  (!apiActionForm.form.valid && apiActionForm.touched) && apiActionModel.agentMethod?.id == '0'}">
 													<ng-template kendoDropDownListItemTemplate let-dataItem>
 														<span style="margin-right: 3px; min-width: 115px; font-weight: bold;">{{ dataItem?.name }}</span> <span style="margin-left: 3px;">{{ dataItem?.description }}</span>
@@ -347,6 +347,7 @@
 														[valueField]="'assetClass'"
 														(valueChange)="onContextValueChange(dataItem)"
 														[(ngModel)]="dataItem.context"
+														[valuePrimitive]="true"
 														required
 														[ngClass]="{'has-error': !dataItem.context || dataItem.context.value === ''}" >
 												</kendo-dropdownlist>
