--- a/web-app/tds/web-app/app-js/modules/fieldSettings/components/number/number-configuration-popup.component.html
+++ b/web-app/tds/web-app/app-js/modules/fieldSettings/components/number/number-configuration-popup.component.html
@@ -67,6 +67,7 @@
                             <kendo-numerictextbox style="width: 100px;"
                                                   name="example"
                                                   [autoCorrect]="true"
+                                                  [spinners]="false"
                                                   [readonly]="true"
                                                   [format]="outputFormat"
                                                   [(ngModel)]="model.maxRange"
