- Refactor of number pipe and control

--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/bulk-change/components/bulk-change-edit/bulk-change-edit.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/bulk-change/components/bulk-change-edit/bulk-change-edit.component.html
@@ -98,9 +98,16 @@
                                     <tds-number-control *ngIf="canShowControl('Number', rowIndex)"
                                                     [(value)]="editRows.selectedValues[rowIndex].value"></tds-number-control>
 
-                                    <b>Pipe:</b> {{editRows.selectedValues[rowIndex].value | tdsNumber: {allowNegatives: false, decimalPlaces: 2, maxRange: 10000, minRange: 0, required: 0, useThousandsSeparator: true} }}<br>
+                                    <b>Pipe:</b> {{editRows.selectedValues[rowIndex].value | tdsNumber: 'n2'}}<br>
                                     <tds-number-control [(value)]="editRows.selectedValues[rowIndex].value"
-                                                        [constraints]="{allowNegatives: false, decimalPlaces: 2, maxRange: 10000, minRange: 0, required: 0, useThousandsSeparator: true}"></tds-number-control>
+                                                        [format]="'n2'"
+                                                        [allowNegatives]="false"
+                                                        [decimalPlaces]="2"
+                                                        [maxRange]="10000"
+                                                        [minRange]="0"
+                                                        [required]="0"
+                                                        [useThousandSeparator]="true">
+                                    </tds-number-control>
                                     <!-- Datetime Fields -->
                                     <b>Output:</b> {{editRows.selectedValues[rowIndex].value}}<br>
 
