TM-12270 - Changes based on PR feedback

--- a/web-app/tds/web-app/app-js/modules/user/components/preferences/user-preferences.component.html
+++ b/web-app/tds/web-app/app-js/modules/user/components/preferences/user-preferences.component.html
@@ -18,7 +18,7 @@
                     <th colspan="2">Preferences: Name / Value</th>
                 </tr>
                 <tr *ngFor="let preference of currentUserPreferences" id="{{preference.prefCode}}">
-                        <td nowrap="nowrap"><span>{{preference.value}}</span></td><td><span class="clear_filter spanAnchor" (click)="removePreference($event)">X</span></td>
+                        <td nowrap="nowrap"><span>{{preference.value}}</span></td><td><span class="clear_filter spanAnchor" (click)="handleRemoveClick($event)">X</span></td>
                 </tr>
             </div>
         </table>
