--- a/web-app/tds/web-app/app-js/modules/dependencies/components/list/dependencies-list.component.html
+++ b/web-app/tds/web-app/app-js/modules/dependencies/components/list/dependencies-list.component.html
@@ -1,3 +1,48 @@
-<div>
-	Welcome to Dependencies list!
+<!-- Main content -->
+<div class="content body tds-kendo-grid api-action-list-component">
+	<section>
+		<div *ngIf="dependenciesColumnModel">
+			<div class="box-body box-with-empty-header">
+				<kendo-grid
+						[data]="gridData"
+						[filter]="state.filter"
+						[filterable]="true"
+						(filterChange)="filterChange($event)"
+						[sort]="state.sort"
+						[skip]="skip"
+						[sortable]="{mode:'single'}"
+						[pageSize]="pageSize"
+						[resizable]="true"
+						(sortChange)="sortChange($event)"
+						[pageable]="{pageSizes: defaultPageOptions, pageSize: pageSize, info: true}"
+						(pageChange)="pageChange($event)"
+						(cellClick)="cellClick($event)"
+						[selectable]="true">
+
+					<kendo-grid-column *ngFor="let column of dependenciesColumnModel.columns" field="{{column.property}}"
+					                   format="{{column.format}}"
+					                   [locked]="column.locked"
+					                   [width]="!column.width ? COLUMN_MIN_WIDTH : column.width">
+
+						<ng-template kendoGridHeaderTemplate>
+							<div class="sortable-column" (click)="onClickTemplate($event)">
+								<label [ngClass]="{'action-header':column.type === 'action'}"> {{column.label}}</label>
+							</div>
+						</ng-template>
+
+						<ng-template kendoGridCellTemplate *ngIf="column.type === 'action'" let-dataItem>
+							<div class="text-center">
+								<button class="btn btn-default" (click)="onEdit(dataItem)">
+									<span class="glyphicon glyphicon-pencil"></span>
+								</button>
+								<button class="btn btn-default" (click)="onDelete(dataItem)">
+									<span class="fa fa-fw fa-trash"></span>
+								</button>
+							</div>
+						</ng-template>
+					</kendo-grid-column>
+				</kendo-grid>
+			</div>
+		</div>
+	</section>
 </div>
