Get the id's of the dependencies

--- a/web-app/tds/web-app/app-js/modules/dependencies/components/list/dependencies-list.component.html
+++ b/web-app/tds/web-app/app-js/modules/dependencies/components/list/dependencies-list.component.html
@@ -33,9 +33,6 @@
 					<!-- Select All column -->
 					<kendo-grid-column [width]="55" [filterable]="false">
 						<ng-template kendoGridHeaderTemplate>
-							<div>
-							</div>
-							<!--
 							<div class="row">
 								<div class="col-md-12 text-center">
 									<tds-checkbox name="assetsSelector"
@@ -45,12 +42,14 @@
 									              [setStateSubject]="bulkCheckboxService.setStateSubject"></tds-checkbox>
 								</div>
 							</div>
-							-->
 						</ng-template>
 
 						<ng-template kendoGridCellTemplate let-dataItem>
 							<label class="selectall-checkbox-column text-center">
-								<input type="checkbox" />
+								<input type="checkbox" id="checkbox_{{dataItem.dependencyId}}"
+								       [checked]="bulkCheckboxService.getValueBulkItem(dataItem.dependencyId)"
+								       (change)="checkItem(dataItem.dependencyId, $event.target.checked)"
+								       name="checkbox_{{dataItem.dependencyId}}">
 							</label>
 						</ng-template>
 					</kendo-grid-column>
