TM-13109 Fixed problem for the Dialog on the Bulk Update

--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-grid/asset-explorer-view-grid.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-grid/asset-explorer-view-grid.component.html
@@ -51,7 +51,7 @@
 						</li>
 					</ul>
 				</div>
-				<tds-bulk-change-button [bulkData]="bulkData"
+				<tds-bulk-change-button #tdsBulkChangeButton
 				                        [enabled]="hasSelectedItems()"
 				                        (clickBulk)="onClickBulkButton()"
 				                        (operationResult)="onBulkOperationResult($event)"></tds-bulk-change-button>
