TM-12169 Rebase against latest from dev/4.6.0

--- a/web-app/tds/web-app/app-js/modules/dependencies/components/list/dependencies-list.component.html
+++ b/web-app/tds/web-app/app-js/modules/dependencies/components/list/dependencies-list.component.html
@@ -17,7 +17,7 @@
 					<!-- Header Toolbar -->
 					<ng-template kendoGridToolbarTemplate [position]="'top'" class="header-section">
 						<div class="col-sm-6 bulkchange-section">
-							<tds-bulk-change-button [bulkData]="bulkData"
+							<tds-bulk-change-button #tdsBulkChangeButton
 							                        [enabled]="hasSelectedItems()"
 							                        (clickBulk)="onClickBulkButton()"
 							                        (operationResult)="onBulkOperationResult($event)">
