--- a/web-app/tds/web-app/app-js/modules/apiAction/components/view-edit/api-action-view-edit.component.html
+++ b/web-app/tds/web-app/app-js/modules/apiAction/components/view-edit/api-action-view-edit.component.html
@@ -69,20 +69,21 @@
 											</div>
 										</div>
 										<div class="form-group">
-											<label for="apiActionAgent" class="col-sm-3 control-label">Dictionary:
+											<label for="apiActionDictionary" class="col-sm-3 control-label">Dictionary:
 												<span style="color: red;" *ngIf="modalType !== actionTypes.VIEW">*</span>
 											</label>
 											<div class="col-sm-8" *ngIf="modalType !== actionTypes.VIEW">
-												<kendo-dropdownlist #apiActionAgent
-																	id="apiActionAgent" name="apiActionAgent" class="form-control"
+												<kendo-dropdownlist id="apiActionDictionary"  name="apiActionDictionary" class="form-control"
                                                                     tabindex="4"
-																	[data]="agentList"
-																	(open)="onOpenAgent()"
-																	(valueChange)="onAgentValueChange($event)"
+																	[data]="dictionaryList"
+																	(open)="onOpenDictionary()"
+																	(valueChange)="onDictionaryValueChange($event)"
 																	[textField]="'name'"
 																	[valueField]="'id'"
 																	[(ngModel)]="apiActionModel.agentClass"
-																	required class="form-control" [ngClass]="{'has-error':  (!apiActionForm.form.valid && apiActionForm.touched) && apiActionModel.agentClass?.id == 0}"></kendo-dropdownlist>
+																	required class="form-control"
+																	[ngClass]="{'has-error':  (!apiActionForm.form.valid && apiActionForm.touched) && apiActionModel.agentClass?.id == 0}">
+												</kendo-dropdownlist>
 											</div>
 											<div class="col-sm-8" *ngIf="modalType === actionTypes.VIEW">
 												<label class="control-label label-detail">{{apiActionModel.agentClass.name}}</label>
@@ -93,8 +94,7 @@
 												<span style="color: red;" *ngIf="modalType !== actionTypes.VIEW">*</span>
 											</label>
 											<div class="col-sm-8" *ngIf="modalType !== actionTypes.VIEW">
-												<kendo-dropdownlist #apiActionAgentMethod
-																	id="apiActionMethod" name="apiActionMethod" class="form-control"
+												<kendo-dropdownlist id="apiActionMethod" name="apiActionMethod" class="form-control"
                                                                     tabindex="5"
 																	[data]="agentMethodList"
 																	[textField]="'name'"
@@ -116,8 +116,7 @@
 										<div class="form-group">
 											<label for="apiActionCredentials" class="col-sm-3 control-label">Credentials:</label>
 											<div class="col-sm-8" *ngIf="modalType !== actionTypes.VIEW">
-												<kendo-dropdownlist #apiActionCredential
-																	id="apiActionCredentials" name="apiActionCredentials" class="form-control"
+												<kendo-dropdownlist id="apiActionCredentials" name="apiActionCredentials" class="form-control"
                                                                     tabindex="6"
 																	[data]="providerCredentialList"
 																	[textField]="'name'"
